# TylkoZapytam

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  docker-compose.development.yml  docker-compose.yml  package-lock.json  pyproject.toml
.github/: pull_request_template.md
.github/issue_templates/: bug_report.md
.github/workflows/: backend-linter.yml  backend-tests.yml  backend.development.yml  dev-backend.yml  super-linter.yml
backend/: .gitignore  Dockerfile  Makefile  manage.py  pyproject.toml  run_gunicorn-dev.sh
backend/TylkoZapytam/: asgi.py  settings.py  urls.py  wsgi.py
backend/app/: admin.py  apps.py  urls.py  views.py
backend/app/call/: call_controller.py  call_models.py  call_serializers.py  call_views.py  test_call.py
backend/app/category/: category_controller.py  category_models.py  category_serializers.py  category_views.py  test_category.py
backend/app/migrations/: 0001_initial.py  0002_alter_question_answer_date.py  0002_category_tags.py  0003_alter_question_answer.py  0003_question_client.py  0004_question_expert_id.py  (+33 more)
backend/tylko_zapytam/: asgi.py  settings.py  wsgi.py
backend/users/: admin.py  serializers.py  signals.py  urls.py
config/gunicorn/: dev.py  prod.py
deployment/: README.md  docker-compose.yml
deployment/backend/: Dockerfile
docs/: README.md
docs/adr/: README.md  why-AWS.md  why-DRF.md  why-frontend-server-api.md  why-microservices.md  why-react.md
docs/c4-diagrams/: c4-diagram.md
docs/deployment/: README.md
docs/functional-requirements/: AUTH-AUTHORIZATION.md  Functional-requirements.md  README.md
docs/how-to/: README.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
shared_lib/: populate_model.py
(+65 files in other folders)
